metroddb-template.yaml
Resources:
  MetroDDBTable:
    Type: AWS::DynamoDB::Table
    Properties:
      TableName: metroddb
      AttributeDefinitions:
        - AttributeName: id
          AttributeType: N
      KeySchema:
        - AttributeName: id
          KeyType: HASH
      ProvisionedThroughput:
        ReadCapacityUnits: 5
        WriteCapacityUnits: 5

  MetroVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.50.0.0/16
      Tags:
        - Key: Name
          Value: MetroVPC


  InternetGateway:
    Type: AWS::EC2::InternetGateway

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref MetroVPC
      InternetGatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MetroVPC

  DefaultRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  Subnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ca-central-1a
      VpcId: !Ref MetroVPC
      CidrBlock: 10.50.1.0/24

  Subnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ca-central-1a
      VpcId: !Ref MetroVPC
      CidrBlock: 10.50.2.0/24

  Subnet3:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ca-central-1b
      VpcId: !Ref MetroVPC
      CidrBlock: 10.50.3.0/24

  Subnet4:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ca-central-1b
      VpcId: !Ref MetroVPC
      CidrBlock: 10.50.4.0/24

  Subnet1AutoAssignPublicIP:
    Type: AWS::EC2::Subnet
    Properties:
      SubnetId: !Ref Subnet1
      MapPublicIpOnLaunch: true

  Subnet3AutoAssignPublicIP:
    Type: AWS::EC2::Subnet
    Properties:
      SubnetId: !Ref Subnet3
      MapPublicIpOnLaunch: true

  Subnet1Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet1
      RouteTableId: !Ref PublicRouteTable

  Subnet3Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet3
      RouteTableId: !Ref PublicRouteTable

  EIP:
    Type: AWS::EC2::EIP

  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt EIP.AllocationId
      SubnetId: !Ref Subnet1

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MetroVPC

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway
      
  Subnet2Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet2
      RouteTableId: !Ref PrivateRouteTable

  Subnet4Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet4
      RouteTableId: !Ref PrivateRouteTable

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for EC2 Instances
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  PublicEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      SubnetId: !Ref Subnet1AutoAssignPublicIP
      SecurityGroupIds:
        - !Ref SecurityGroup

  PrivateEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      SubnetId: !Ref Subnet2AutoAssignPublicIP
      SecurityGroupIds:
        - !Ref SecurityGroup
